[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/_fondV1.jpg" type="Texture" id=2]
[ext_resource path="res://Menu/button.png" type="Texture" id=3]
[ext_resource path="res://ui/SovietProgram-BoldItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Menu/titre.png" type="Texture" id=5]
[ext_resource path="res://Menu/Xolonium-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 6 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.361328
margin_bottom = -0.361328
script = ExtResource( 1 )

[node name="Fond" type="TextureRect" parent="."]
margin_right = 614.0
margin_bottom = 2718.0
texture = ExtResource( 2 )

[node name="Credits" type="TextureButton" parent="."]
margin_left = 88.0
margin_top = 904.317
margin_right = 538.0
margin_bottom = 1016.32
texture_normal = ExtResource( 3 )

[node name="Label2" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -111.0
margin_right = 221.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 1 )
text = "CREDITS"
align = 1
valign = 1

[node name="Play" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -330.119
margin_right = 225.0
margin_bottom = -218.119
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Play"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -227.0
margin_top = -111.949
margin_right = 227.0
margin_bottom = 2.05054
custom_fonts/font = SubResource( 1 )
text = "PLAY"
align = 1
valign = 1

[node name="Titre" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.242
margin_top = 111.0
margin_right = 301.758
margin_bottom = 264.0
texture = ExtResource( 5 )

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true

[node name="ColorRect" type="ColorRect" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.105882, 0.25098, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Popup"]
margin_left = 5.0
margin_top = -3.0
margin_right = 616.0
margin_bottom = 1071.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.941176, 0.909804, 0.439216, 1 )
bbcode_enabled = true
bbcode_text = "                   Space Express              
An open source game made for  Open Jam 2019

	Coding
          Clément \"Topy\" Orlandini
          Antoine \"Foxy\" Couapel

	Art
          Emilia \"Lyrola\" Briault
          Ludovic \"BroZ\" Warin

	Music
                  Tristan Clément

                 Software used
     Affinity Designer (Proprietary)
     GIMP (Open Source)
     Godot (Open Source)
     SFXR (Open Source)
     LMMS (Open Source)
     Audacity (Open Source)

Our game's sources are available on Github ! 
(link on itch.io's page)
"
tab_size = 24
text = "                   Space Express              
An open source game made for  Open Jam 2019

	Coding
          Clément \"Topy\" Orlandini
          Antoine \"Foxy\" Couapel

	Art
          Emilia \"Lyrola\" Briault
          Ludovic \"BroZ\" Warin

	Music
                  Tristan Clément

                 Software used
     Affinity Designer (Proprietary)
     GIMP (Open Source)
     Godot (Open Source)
     SFXR (Open Source)
     LMMS (Open Source)
     Audacity (Open Source)

Our game's sources are available on Github ! 
(link on itch.io's page)
"

[node name="Croix" type="Button" parent="Popup"]
margin_left = 540.608
margin_top = 2.21667
margin_right = 605.608
margin_bottom = 62.2167
custom_fonts/font = SubResource( 3 )
text = "X"
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Popup/Croix" to="." method="_on_Croix_pressed"]
